@@ -16,12 +16,25 @@ class AtlasProdPostProcessor (PostProcessorBase):
 
     # main
     def doPostProcess(self,taskSpec,tmpLog):
+        # get DDM I/F
+        ddmIF = self.ddmIF.getInterface(taskSpec.vo)
+        # loop over all datasets
+        for datasetSpec in taskSpec.datasetSpecList:
+            try:
+                # freeze output and log datasets
+                if datasetSpec.type in ['output','log']:
+                    tmpLog.info('freezing datasetID={0}:Name={1}'.format(datasetSpec.datasetID,datasetSpec.datasetName))
+                    ddmIF.freezeDataset(datasetSpec.datasetName,ignoreUnknown=True)
+            except:
+                errtype,errvalue = sys.exc_info()[:2]
+                tmpLog.warning('failed to freeze datasets with {0}:{1}'.format(errtype.__name__,errvalue))
+                return self.SC_FAILED
         try:
             self.doBasicPostProcess(taskSpec,tmpLog)
         except:
             errtype,errvalue = sys.exc_info()[:2]
             tmpLog.error('doBasicPostProcess failed with {0}:{1}'.format(errtype.__name__,errvalue))
-            return self.SC_FAILED
+            return self.SC_FATAL
         return self.SC_SUCCEEDED
             
     
